scss/widgets/common/_scheduler.scss
@use "../base/mixins" as *;
// adduse


$SCHEDULER_APPOINTMENT_COLLECTOR_MARGIN: 3px;
$SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT: 20px;
$SCHEDULER_POPUP_SCROLLABLE_CONTENT_PADDING: 20px;

.dx-scheduler-appointment-popup {
  .dx-popup-content {
    padding-top: 0;
    padding-bottom: 0;
  }

  .dx-scrollable-content {
    padding-top: $SCHEDULER_POPUP_SCROLLABLE_CONTENT_PADDING;
  }

  .dx-form.dx-recurrence-editor-container {
    .dx-scrollable-content {
      padding-top: 0;
    }
  }
}

.dx-popup-wrapper.dx-scheduler-appointment-tooltip-wrapper,
.dx-scheduler .dx-scheduler-overlay-panel {
  .dx-popup-content {
    padding: 0;

    .dx-list-item {
      width: 360px;

      .dx-list-item-content {
        padding: 5px;
      }
    }
  }

  .dx-tooltip-appointment-item {
    display: flex;

    .dx-tooltip-appointment-item-marker-body {
      width: 20px;
      height: 20px;
      border-radius: 50%;
      margin-top: 7px;
      margin-left: 5px;
    }

    .dx-tooltip-appointment-item-content {
      flex-basis: 100%;
      margin: 5px 10px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;

      .dx-tooltip-appointment-item-content-subject {
        text-align: left;
        font-weight: bold;
        font-size: 16px;
        letter-spacing: 0.01em;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }

      .dx-tooltip-appointment-item-content-date {
        text-align: left;
        font-size: 12px;
        opacity: 0.8;
        margin-top: 10px;
      }
    }
  }
}

.dx-scheduler {
  .dx-scheduler-appointment-content-details {
    margin-top: 2px;

    .dx-scheduler-work-space:not(.dx-scheduler-agenda) {
      .dx-scheduler-appointment-content-date {
        line-height: 0.8;
      }
    }
  }

  .dx-scheduler-overlay-panel {
    .dx-overlay-content {
      position: relative;
      background: #fff;
    }
  }

  .dx-empty-message {
    line-height: normal;
  }
}

.dx-scheduler-all-day-panel {
  td {
    padding: 0;
  }
}

.dx-scheduler-appointment-collector {
  position: absolute;
  display: block;
  height: $SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
  text-align: center;
  cursor: pointer;
  margin: $SCHEDULER_APPOINTMENT_COLLECTOR_MARGIN 0 0 $SCHEDULER_APPOINTMENT_COLLECTOR_MARGIN;

  .dx-scheduler-appointment-collector-content {
    @include dx-overflow();

    margin: 0 2* ($SCHEDULER_APPOINTMENT_COLLECTOR_MARGIN - 1);

    &.dx-button-content {
      padding: 0;
    }

    span:last-child {
      display: inline-block;
      vertical-align: middle;
      line-height: $SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT / 1.5;
      height: $SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
      padding-left: 2px;
    }
  }

  &.dx-state-hover {
    &:before {
      border-radius: $SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
    }
  }

  &.dx-button.dx-button-default {
    padding: 0;
    max-width: none;
    border-radius: $SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
  }
}

.dx-scheduler-work-space-mouse-selection {
  .dx-scheduler-fixed-appointments,
  .dx-scheduler-scrollable-appointments {
    pointer-events: none;
  }
}

.dx-rtl {
  .dx-scheduler-appointment-collector {
    margin: $SCHEDULER_APPOINTMENT_COLLECTOR_MARGIN $SCHEDULER_APPOINTMENT_COLLECTOR_MARGIN 0 0;
  }
}

.dx-scheduler-adaptive {
  @media (max-width: 450px) {
    .dx-scheduler-view-switcher-label {
      display: none;
    }
  }

  .dx-scheduler-work-space-week .dx-scheduler-header-panel-cell {
    white-space: pre-wrap;
    line-height: 1.3;
  }

  .dx-scheduler-appointment-collector {
    margin: 0;

    .dx-scheduler-appointment-collector-content {
      span:last-child {
        line-height: $SCHEDULER_APPOINTMENT_COLLECTOR_HEIGHT;
      }
    }
  }
}

